--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+v2.1.6, 2013-11-21 -- Additional init options.
 v2.1.5, 2013-11-21 -- Minor documentation changes.
 v2.1.4, 2013-11-20 -- Fixed incorrect version.
 v2.1.3, 2013-11-20 -- Bugfix release.
