--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+v2.2.2, 2013-12-07 -- Should handle any Git version.
 v2.2.1, 2013-12-07 -- Bugfix release.
 v2.2.0, 2013-12-07 -- Support Git 1.8.
 v2.1.7, 2013-11-23 -- Bugfix release.
