--- a/bin/install
+++ b/bin/install
@@ -1,6 +1,2 @@
 #!/bin/sh
-rm -rf dist
-python2 setup.py clean
-python2 setup.py sdist
-sudo pip2 uninstall homekeeper 2>&1
-sudo pip2 install dist/homekeeper-*.tar.gz
+pip2 install . --upgrade
