--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+v3.1.0, 2015-03-03 -- New includes feature.
 v3.0.1, 2014-10-13 -- Bugfix release.
 v3.0.0, 2014-10-10 -- New format for storing dotfiles.
 v2.2.3, 2014-01-02 -- Fixes bug with deleting existing dotfile(s).
