--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+v3.2.0, 2015-03-03 -- Feature release.
 v3.1.1, 2015-03-03 -- Bugfix release.
 v3.1.0, 2015-03-03 -- New includes feature.
 v3.0.1, 2014-10-13 -- Bugfix release.
